LoxInterpreter/Tools/LoxGrammar.txt
program        → declaration* EOF ;

declaration    -> classDecl
                | funcDecl
                | varDecl 
                | statement ;


classDecl       -> "class" IDENTIFIER "{" function* "}" ;
funcDecl        -> "fun" function ;
function        -> IDENTIFIER "(" parameters? ")" block ;
parameters      -> IDENTIFIER ( "," IDENTIFIER )* ;
varDecl         -> "var" IDENTIFIER "=" expression ";" ;

statement      → breakStmt
                | forStmt
                | ifStmt
               | printStmt
                | returnStmt
               | whileStmt
               | block 
               | exprStmt ;

breakStmt       -> "break" ";" ;
forStmt         -> "for" "(" ( varDecl | exprStmt | ";")
                    expression? ";" expression? ")"
                    statement ;
exprStmt       → expression ";" ;
ifStmt          -> "if" "(" expression ")" statement
                ( "else" statement )? ;
printStmt      → "print" expression ";" ;
returnStmt      -> "return" expression? ";" ;
whileStmt       -> "while" "(" expression ")" statement ;
block           -> "{" declaration* "}" ;

expression     → assignment ( "," assignment )* ;
assignment     -> ( call "." )? IDENTIFIER "=" assignment
                | logic_or ;
logic_or        -> logic_and ( "or" logic_and )* ;
logic_and       -> equality ( "and" equality )* ;
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" | "|" | "&") factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary | call ;
call           -> primary ( "(" arguments? ")" | "." IDENTIFIER )* ;
arguments       -> expression ( "," expression )* ;

primary        → NUMBER | STRING 
               | "true" | "false" | "nil" | "exit"
               | "(" expression ")" 
               | IDENTIFIER ;
